@@ -587,12 +587,6 @@ void GCOMEventList::read_events(const GFitsTable& table)
         const GFitsTableCol* ptr_reflag     = table["RC_REFLAG"];     //
         const GFitsTableCol* ptr_veto       = table["RC_VETO"];       //
 
-        // Disable scaling of TOF and PSD values so that the original channel
-        // values are recovered. The values are divided by 128.0 below. This
-        // emulates the behaviour of the evpdal13.pevpsr.f function.
-        ptr_psd->scale(1.0, 0.0);
-        ptr_tof->scale(1.0, 0.0);
-
         // Initialise boundaries
         GEnergy emin;
         GEnergy emax;
@@ -624,7 +618,9 @@ void GCOMEventList::read_events(const GFitsTable& table)
             // Set phibar value (deg)
             double phibar = ptr_phibar->real(i) * gammalib::rad2deg;
 
-            // Set PSD and TOF values
+            // Set PSD and TOF values. Note that the values are read unscaled,
+            // hence we need to divide explicitly by the 1/TSCAL factor. This
+            // emulates the behaviour of the evpdal13.pevpsr.f function.
             double psd = double(ptr_psd->integer(i))/128.0;
             double tof = double(ptr_tof->integer(i))/128.0;
 
